PROJECT(sayonara_gstreamer)
CMAKE_MINIMUM_REQUIRED(VERSION 2.7)

include(FindPkgConfig)

SET(CMAKE_C_FLAGS "-Wall")
SET(CMAKE_CXX_FLAGS "-Woverloaded-virtual -Wall")


INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${GSTREAMER_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GLIB_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GOBJECT_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GSTREAMER_INCLUDE_DIRS})


FIND_PACKAGE(Qt4 REQUIRED)
PKG_CHECK_MODULES(GSTREAMER REQUIRED gstreamer-0.10)


SET(HEADERS
	GSTEngine.h 
	../Engine.h
)

SET(SOURCES
	GSTEngine.cpp
	../../HelperStructs/Helper.cpp
	../../HelperStructs/id3.cpp
)
	
QT4_WRAP_CPP(HEADERS_MOC
	${HEADERS}
)

INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

ADD_LIBRARY(sayonara_gstreamer SHARED ${SOURCES} ${HEADERS_MOC})
TARGET_LINK_LIBRARIES(sayonara_gstreamer ${QT_LIBRARIES} gstreamer-0.10)

SET(CMAKE_INSTALL_PREFIX "/usr")
INSTALL(TARGETS sayonara_gstreamer DESTINATION lib/sayonara)
